Ad some initial code for other endpoints and group stuff better in the api spec
